# game-engine

./: .gitignore  Cargo.toml  build.rs
res/: color.wgsl  shader-instanced.wgsl  shader.wgsl  shader_back.wgsl  sprite.wgsl
res/ui/: debug.json  debug.nml
src/: camera.rs  config.rs  entity.rs  input.rs  lib.rs  main.rs  resources.rs  state.rs  ui_canvas.rs
src/components/: mod.rs  player_movement.rs
src/graphics/: material.rs  mesh.rs  mod.rs  pipeline.rs  sorting_layer.rs  sprite.rs  texture.rs  vertex.rs
src/parsing/: mod.rs  nml.rs  styles.rs
src/physics/: collider.rs
src/ui/: canvas.rs  element.rs  element_kind.rs  mod.rs  style.rs  style_rule.rs  ui_vertex.rs
