[package]
name = "fooheppy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.64"
async-executor = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
cfg-if = "1"
cgmath = "0.18.0"
env_logger = "0.9"
image = { version = "0.24.3", features = ["png", "jpeg"] }
log = "0.4"
pollster = "0.2.5"
winit = "0.27.1" 
wgpu = "0.14"
wgpu_glyph = "0.18.0"
dotenv = "0.15.0"
roxmltree = "0.16.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

